--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
 
     <TextView
         android:id="@+id/cityLabel"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="42dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -39,7 +39,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:max="24"
-        android:progress="1"
+        android:progress="0"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.509"
@@ -86,7 +86,7 @@
 
     <TextView
         android:id="@+id/temperatureLabel"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="51dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -104,7 +104,7 @@
 
     <TextView
         android:id="@+id/rainLabel"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="53dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
@@ -119,11 +119,13 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.389" />
+        app:layout_constraintVertical_bias="0.389"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <TextView
         android:id="@+id/cloudinessLabel"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="53dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
@@ -138,6 +140,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.269" />
+        app:layout_constraintVertical_bias="0.269"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
 </android.support.constraint.ConstraintLayout>
